--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Menglin Jiang's Resume </title>
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -10,7 +10,7 @@
     <p style="font-size:50px; font-family: Comic Sans MS, cursive, sans-serif;">MENGLIN JIANG</p>
     <p><span>&#127968;</span>5315 Smiths Cove Ln, Greenbelt, MD 20770</p>
     <p><span>&#9990;</span>(703)508-2861 </p>
-    <span>&#9993;</span><a href=mailto:jiangmenglin0225@gamil.com?subject="HTML link">jiangmenglin0225@gmail.com</a>
+    <span>&#9993;</span><a href="google.com">jiangmenglin0225@gmail.com</a>
   </div>
 
   <div id="text">
